--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,23 @@
 body{
     font-family: 'Poppins';
     font-weight: 700;
+    overflow-x: hidden;
+    margin: 0px;
 }
+
+header{
+    padding: 20px 15px 15px 15px;
+}
+
+.img-section-1{
+    overflow: hidden;
+    width: 100vw;
+}
+
+.itm-1{
+    color: black;
+}
+
 .menu-logo{
     display: flex;
     justify-content: space-between;
@@ -105,7 +121,6 @@ h2{
     /* background-size: 50%; 
     background-color: #F0F1F6; */
     width:100vw;
-    margin-left: -8px;
     height: 100%; 
     background: linear-gradient(to top, #F0F1F6 50%, white 50%); 
 }
@@ -136,7 +151,6 @@ h2{
 .section-advanced{
     background-color: #F0F1F6;
     width: 100vw;
-    margin-left: -8px;
     margin-top: -25px;
     padding-top: 110px;
     padding-bottom: 75px;
@@ -169,9 +183,6 @@ h2{
 .sec-div-icons{
     background-color: #F0F1F6;
     width: 100vw;
-    margin-left: -8px;
-    padding
-      -bottom: 100px;
 }
 
 .brnd-sction{
@@ -216,7 +227,8 @@ h2{
     background-position-x: right;
     background-color: #3A3053;
     width: 100vw;
-    margin-left:-8px;
+    margin-top: 90px;
+
 }
 .upper-margin{
     margin-top: -4px;
@@ -229,7 +241,7 @@ h2{
     align-items: center;
 }
 .boost-div{
-    height: 380px;
+    height: 300px;
 }
 .wider-button{
     width: 200px;
@@ -238,7 +250,6 @@ h2{
 .footer-sec{
     background-color: #232027;
     width: 100vw;
-    margin-left: -8px;
 }
 
 .title-footer{
@@ -269,5 +280,4 @@ h5 {
 }
 .icons{
     padding-right: 20px;
-}
 }
