--- a/styles/desktop-styles.css
+++ b/styles/desktop-styles.css
@@ -162,6 +162,10 @@ h2{
     height: 100%; 
     background: linear-gradient(to top, #F0F1F6 50%, white 50%); 
 }
+.gray-bg{
+    background-color:#F0F1F6;
+    padding: 15px 10px;
+}
 .input-shrtn-link{
     height: 50px;
     width: 90%;
@@ -190,7 +194,7 @@ h2{
     background-color: #F0F1F6;
     width: 100vw;
     margin-top: -25px;
-    padding-top: 110px;
+    padding-top: 100px;
     padding-bottom: 75px;
 }
 
