--- a/styles/styles.css
+++ b/styles/styles.css
@@ -94,9 +94,11 @@ h2{
     font-size: 19px;
     text-align: center;
     color: var(--light-gray);
-    
 }
 
+.cyan-color{
+    color: var(--blue-btn) !important;
+}
 .gs-btn{
     color: white !important;
     background-color: var(--blue-btn);
@@ -133,6 +135,36 @@ h2{
     height: 100%; 
     background: linear-gradient(to top, #F0F1F6 50%, white 50%); 
 }
+.gray-bg{
+    background-color:#F0F1F6;
+    padding: 15px 10px;
+}
+.cards-shortened{
+    background-color: white;
+    width: 90vw; 
+    height: auto; 
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    padding: 15px;
+}
+.cards-shortened span{
+    font-weight: 400;
+    color: var(--purple-title);
+}
+.cards-shortened div{
+    margin: 3px;
+}
+.cards-shortened button{
+    margin-top: 5px;
+}
+
+.rayita-shorten{
+    border-top: .1px solid hsl(0, 0%, 75%); 
+    width:110%;
+    margin-left: -5%;
+}
 .input-shrtn-link{
     height: 50px;
     width:90%;
@@ -161,7 +193,7 @@ h2{
     background-color: #F0F1F6;
     width: 100vw;
     margin-top: -25px;
-    padding-top: 110px;
+    padding-top: 100px;
     padding-bottom: 75px;
 }
 
