--- a/styles/styles.css
+++ b/styles/styles.css
@@ -163,7 +163,7 @@ h2{
 .rayita-shorten{
     border-top: .1px solid hsl(0, 0%, 75%); 
     width:110%;
-    margin-left: -5%;
+    margin-left: -5% !important;
 }
 .input-shrtn-link{
     height: 50px;
