--- a/styles/styles.css
+++ b/styles/styles.css
@@ -365,5 +365,10 @@ h5 {
 }
 
 #div-input{
-    margin-top: -15px;
+    width: 122px;
+    margin-left: -60%;
+}
+.input-short-desktop{
+    flex-direction: column;
+    align-items: center;
 }
