--- a/styles/desktop-styles.css
+++ b/styles/desktop-styles.css
@@ -31,6 +31,8 @@ header{
 .menu-logo{
     justify-content: space-between;
     width: 15%;
+    margin-left: 93px;
+
 }
 .transparent-button{
     background-color: transparent;
@@ -40,16 +42,17 @@ header{
 .menu-morado{
     width: 85%;
     height:auto;
-    display: flex;
+    display: flex !important;
     color: var(--light-gray);
     border-radius: 10px;
     justify-content: space-between;
+    padding-top: 0px !important;
 }
 .rayita-menu-morado{
     display:none;
 }
 #signButton{
-    display: inline;
+    display: inline !important;
 }
 ul{
     list-style:none;
