--- a/styles/desktop-styles.css
+++ b/styles/desktop-styles.css
@@ -23,6 +23,9 @@ header{
     overflow: hidden;
     width: 100vw;
 }
+.img-class{
+    justify-content: left !important;
+}
 
 .itm-1{
     color: black;
@@ -216,6 +219,7 @@ h2{
     width: 100px;
     height: 100px;
     margin-top: -50px;
+    margin-left: 50px;
     display: flex;
     justify-content: center;
     align-items: center;    
@@ -253,10 +257,10 @@ h2{
     border-radius: 10px;
     align-items: center;
     background-color: white;
-    /* padding-bottom: 30px; */
+    padding-bottom: 30px;
 }
 .card-content{
-    padding:30px;
+    padding: 30px;
 }
 .brnd-sction h2{
     color: var(--purple-title);
@@ -268,8 +272,11 @@ h2{
 .reco{
     font-family: 'Poppins';
     font-weight: 700;
-    font-size: 30px;
-    text-align: center;
+    font-size: 20px;
+    margin-top: 10px;
+    line-height: 20px;
+    margin-bottom: 30px;
+    text-align: left;
 }
 
 .boost{
@@ -277,7 +284,7 @@ h2{
     font-family: 'Poppins';
     font-weight: 400;
     font-size: 20px;
-    text-align: center;
+    text-align: left;
     color: var(--light-gray);
 }
 
@@ -510,6 +517,7 @@ h5 {
     font-family: 'Poppins';
     font-weight: 700;
     text-align: center;
+    font-size: 28px;
 }
 
 .upper-margin{
