--- a/styles/styles.css
+++ b/styles/styles.css
@@ -49,8 +49,8 @@ header{
     border-radius: 10px;
     justify-content: space-between;
     position: absolute;
-    width: 83%;
-    margin-left: -3px;
+    width: 85%;
+    /* margin-left: -3px; */
 
 }
 .rayita-menu-morado{
@@ -277,7 +277,10 @@ h2{
 .reco{
     font-family: 'Poppins';
     font-weight: 700;
-    font-size: 30px;
+    font-size: 20px;
+    margin-top: 10px;
+    line-height: 20px;
+    margin-bottom: 30px;
     text-align: center;
 }
 
@@ -285,11 +288,13 @@ h2{
     margin-top: -10px;
     font-family: 'Poppins';
     font-weight: 400;
-    font-size: 20px;
+    font-size: 18px;
     text-align: center;
     color: var(--light-gray);
 }
-
+.card-content{
+    padding:15px;
+}
 .card-margin-top{
     margin-top: 50px;
 }
