--- a/styles/desktop-styles.css
+++ b/styles/desktop-styles.css
@@ -19,6 +19,9 @@ header{
     display: flex;
 }
 
+.img-class{
+    justify-content: left !important;
+}
 .img-section-1{
     overflow: hidden;
     width: 100vw;
@@ -216,6 +219,7 @@ h2{
     width: 100px;
     height: 100px;
     margin-top: -50px;
+    margin-left: 50px;
     display: flex;
     justify-content: center;
     align-items: center;    
@@ -248,7 +252,7 @@ h2{
 }
 
 .brnd-sction{
-    width: 25%;
+    width: 30%;
     height: fit-content;
     border-radius: 10px;
     align-items: center;
@@ -256,7 +260,7 @@ h2{
     /* padding-bottom: 30px; */
 }
 .card-content{
-    padding:30px;
+    padding: 15px 30px 17px 30px
 }
 .brnd-sction h2{
     color: var(--purple-title);
@@ -268,16 +272,19 @@ h2{
 .reco{
     font-family: 'Poppins';
     font-weight: 700;
-    font-size: 30px;
-    text-align: center;
+    font-size: 20px;
+    margin-top: 10px;
+    line-height: 20px;
+    margin-bottom: 30px;
+    text-align: left;
 }
 
 .boost{
     margin-top: -10px;
     font-family: 'Poppins';
     font-weight: 400;
-    font-size: 20px;
-    text-align: center;
+    font-size: 18px;
+    text-align: left;
     color: var(--light-gray);
 }
 
@@ -285,7 +292,7 @@ h2{
     margin-top: 50px;
 }
 .rayita-cyan{
-    width: 51px;
+    width: 25px;
     height: 0px;
     border: solid hsl(180, 66%, 49%) 5px;
 }
@@ -373,8 +380,11 @@ h5 {
     line-height: 80px;
 }
 .msg{
-    text-align: left;
-    margin-top: 0px;
+    font-family: 'Poppins';
+    font-weight: 400;
+    font-size: 19px;
+    text-align: center;
+    color: var(--light-gray);
 }
 .gs-btn{
     color: white !important;
