fix section get started subtitle and padding of cards Co-authored-by:JordiGN jordign.mx@gmail.com Co-authored-by: alcamk alvarezohc@gmail.com

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -264,7 +264,7 @@ h2{
     align-items: center;
     background-color: white;
     margin-left: 5%;
-    padding-bottom: 30px;
+    /*padding-bottom: 30px;*/
 }
 
 .brnd-sction h2{
