agregando propiedad calc(100% -10px) al alto de las cards caracterisitcas como sugerencia de un mentor co-authored-by: alcamk alvarezohc@gmail.com co-authored-by: develiasdaniel eliasdanielsanchezlopez@gmail.com

--- a/styles/desktop-styles.css
+++ b/styles/desktop-styles.css
@@ -257,11 +257,12 @@ h2{
 
 .brnd-sction{
     width: 30%;
-    height: fit-content;
+    height: calc(100% - 10px);
     border-radius: 10px;
     align-items: center;
     background-color: white;
     padding-bottom: 30px;
+    
 }
 .card-content{
     padding: 15px 30px 17px 30px;
